--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NODE_ENV = development
 PORT = 8000
+
+MONGO_URI = mongodb+srv://wgumboc:JeXL4rB$vay$tPi@cluster0.ryodf.mongodb.net/coursesdata?retryWrites=true&w=majority
