Implemented registration and login functionality in backend

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ NODE_ENV = development
 PORT = 8000
 
 MONGO_URI = mongodb+srv://wgumboc:JeXL4rB$vay$tPi@cluster0.ryodf.mongodb.net/coursesdata?retryWrites=true&w=majority
+
+JWT_SECRET = abc123
