--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^7.2.0",
     "gh-pages": "^4.0.0",
     "nodemon": "^2.0.16"
   }
